--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
+astroid==2.4.2
 certifi==2020.12.5
 chardet==4.0.0
 decorator==4.4.2
 idna==2.10
 imageio==2.9.0
 imageio-ffmpeg==0.4.2
+isort==5.6.4
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 moviepy==1.0.3
 numpy==1.19.4
 Pillow==8.0.1
 proglog==0.1.9
 requests==2.25.1
+six==1.15.0
+SpeechRecognition==3.8.1
+toml==0.10.2
 tqdm==4.54.1
 urllib3==1.26.2
+wrapt==1.12.1
