--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ moviepy==1.0.3
 numpy==1.19.4
 Pillow==8.0.1
 proglog==0.1.9
+PyYAML==5.3.1
 requests==2.25.1
 six==1.15.0
 SpeechRecognition==3.8.1
